WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240480
Crash in WebCore::InsertTextCommand::positionInsideTextNode
https://bugs.webkit.org/show_bug.cgi?id=240480
Summary
Crash in WebCore::InsertTextCommand::positionInsideTextNode
Gabriel Nava Marino
Reported
2022-05-16 14:25:53 PDT
<
rdar://problem/92251933
>
Attachments
Patch for landing
(1.60 KB, patch)
2022-05-16 14:44 PDT
,
Gabriel Nava Marino
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabriel Nava Marino
Comment 1
2022-05-16 14:44:56 PDT
Created
attachment 459457
[details]
Patch for landing
EWS
Comment 2
2022-05-16 16:59:52 PDT
Committed
r294281
(
250625@main
): <
https://commits.webkit.org/250625@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459457
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug